--- a/client/src/components/banner/banner.scss
+++ b/client/src/components/banner/banner.scss
@@ -11,11 +11,19 @@
   background-size: cover;
   background-repeat: no-repeat;
 
+  @include md {
+    padding: 0 5rem;
+  }
+
+  @include sm {
+    padding: 2rem;
+  }
+
   &_content {
     @include flex(column, null, null, 2rem);
     padding: 3rem;
     font-size: clamp(1.8rem, 1.8vw, 1.8rem);
     background-color: $color-light;
-    width: 25%;
+    width: 40rem;
   }
 }
