--- a/client/src/sass/utils/_mixins.scss
+++ b/client/src/sass/utils/_mixins.scss
@@ -8,8 +8,9 @@
 
 @mixin btn() {
   width: 100%;
-  padding: 1rem;
-  font-size: 1.6rem;
+  height: 4rem;
+  padding: 0 1rem;
+  font-size:clamp(1.6rem, 1.6vw, 1.8rem);
   border: none;
   background-color: $color-green;
   cursor: pointer;
