--- a/client/src/sass/base/_reset.scss
+++ b/client/src/sass/base/_reset.scss
@@ -10,9 +10,10 @@ html {
   font-size: 62.5%;
   min-height: 100vh;
   color: $color-dark;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
 }
 
-body{
+body {
   max-width: 2600px;
   margin: 0 auto;
 }
